Dupliframes+Dupliverts is not working in Rendered Viewport Shading mode. #38306

Closed
opened 2014-01-21 18:27:51 +01:00 by ronan ducluzeau · 7 comments

System Information
ubuntu 12.04 64bits NVIDIA Quadro FX 3500

Blender Version
Broken: 2.69.9 70ce11d

Rendered display enters into internal loop and never ends with duplifaces or dupliverts of an already dupliframed object.

Add two keyframes at frame1 and frame 100 to animate location of default cube.
Activate dupliframes on default cube.
Add a plane and subdivide it once.
Make the plane parent of the cube.
Activate dupliverts or duplifaces button in plane properties. -> solid display shows dupliframes + dupliverts effects correctly.
Change Solid shading mode to Rendered.

Based on a (as simple as possible) attached .blend file with minimum amount of steps
loop_rendered.blend

**System Information** ubuntu 12.04 64bits NVIDIA Quadro FX 3500 **Blender Version** Broken: 2.69.9 70ce11d Rendered display enters into internal loop and never ends with duplifaces or dupliverts of an already dupliframed object. Add two keyframes at frame1 and frame 100 to animate location of default cube. Activate dupliframes on default cube. Add a plane and subdivide it once. Make the plane parent of the cube. Activate dupliverts or duplifaces button in plane properties. -> solid display shows dupliframes + dupliverts effects correctly. Change Solid shading mode to Rendered. Based on a (as simple as possible) attached .blend file with minimum amount of steps [loop_rendered.blend](https://archive.blender.org/developer/F71114/loop_rendered.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @zeauro

Added subscriber: @zeauro

I forgot to say that bug concerns Rendered Shading mode for both BI and Cycles.

I forgot to say that bug concerns Rendered Shading mode for both BI and Cycles.
Brecht Van Lommel self-assigned this 2014-01-21 21:01:35 +01:00

This issue was referenced by blender/blender-addons-contrib@2aeb49204d

This issue was referenced by blender/blender-addons-contrib@2aeb49204d40d6a43026de6f87fd5e7f0df100c6

This issue was referenced by 2aeb49204d

This issue was referenced by 2aeb49204d40d6a43026de6f87fd5e7f0df100c6

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 2aeb49204d.

Closed by commit 2aeb49204d.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38306
No description provided.